Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57291

Setting dataProxy property in Bar3DSeries does not work as expected

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.0 Beta 2
    • 5.7.0, 5.8.0 Beta
    • Data Visualization
    • None
    • Win10, MSVC2015 U2 x64, Qt 5.7 + Qt 5.8 beta.
    • f59ad3de8b056e7fd8cf9999f93aa88ff65d9808

      Only the first row/column is taken into account when a custom proxy based on QBarDataProxy is used in the following declarative way:

      Bars3D {
          Bar3DSeries { dataProxy: dummyDataProxy }
      }
      

      with 'dummyDataProxy' being exposed trough a setContextProperty() call.

      All data is correctly displayed when exposing a complete QBar3DSeries with the same data proxy.

      Bug is reproducible in the minimal attached project.

        1. qtdatavizbug.zip
          2 kB
          Autheman Benoit
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tokorpip Tomi Korpipää
            cneben2 Autheman Benoit
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes