Handle data proxy change on the controller

Adds a connection to controllers to react dataProxyChange signal.

Task-number: QTBUG-57291
Change-Id: Ia9ad6880418ec861381e1a5363ce38f8d0bda2e8
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>